k8s/service.yml
apiVersion: v1
kind: Service   
metadata:
  name: hello-world-service
  labels:
    app: hello-world
spec:
  type: NodePort
  ports:
  - port: 8080  
    targetPort: 8080
  selector:
    env: front-end
